<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    tools:context=".DailyPrayerFragments.DuhrFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/duhr_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_40sdp"
            app:cardCornerRadius="@dimen/_8sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/duhr_one"
                android:padding="@dimen/_20sdp"
                android:textSize="18sp"
                android:background="#F8F8F8"
                android:textColor="@color/text_dark"
                android:gravity="center"/>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/duhr_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_40sdp"
            app:cardCornerRadius="@dimen/_8sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/duhr_two"
                android:padding="@dimen/_20sdp"
                android:background="#F8F8F8"
                android:textColor="@color/text_dark"
                android:textSize="18sp"
                android:gravity="center"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/duhr_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_40sdp"
            app:cardCornerRadius="@dimen/_8sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fajar_one"
                android:padding="@dimen/_20sdp"
                android:background="#F8F8F8"
                android:textColor="@color/text_dark"
                android:textSize="18sp"
                android:gravity="center"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/duhr_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_40sdp"
            app:cardCornerRadius="@dimen/_8sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/duhr_four"
                android:padding="@dimen/_20sdp"
                android:background="#F8F8F8"
                android:textColor="@color/text_dark"
                android:textSize="18sp"
                android:gravity="center"/>
        </androidx.cardview.widget.CardView>



    </LinearLayout>

</FrameLayout>